--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="gold_700">#aa7500</color>
+    <color name="gold_500">#ffca28</color>
+    <color name="gold_600">#c79a00</color>
+    <color name="yellow_500">#ffd54f</color>
+    <color name="yellow_200">#ffff81</color>
+    <color name="brown_600">#764a00</color>
+    <color name="brown_800">#530b00</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="brown_300">#b9642e</color>
 </resources>
