--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,11 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="standard_layout_margin">16dp</dimen>
+    <dimen name="banner_margin_top">16dp</dimen>
+    <dimen name="banner_tv_vertical_padding">4dp</dimen>
+    <dimen name="banner_tv_horizontal_padding">12dp</dimen>
+    <dimen name="standard_cv_padding">8dp</dimen>
+    <dimen name="coin_cv_view_margin">1dp</dimen>
+    <dimen name="banner_width">264dp</dimen>
+    <dimen name="status_bar_tv_padding">16dp</dimen>
 </resources>
