designed layouts and added menu

--- a/app/src/main/res/drawable-nodpi/curved_bordered_background.xml
+++ b/app/src/main/res/drawable-nodpi/curved_bordered_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/backgroundColoredColor" />
+    <!-- <solid android:color="@color/backgroundColoredColor" />
 
     <stroke android:width="@dimen/fab_margin_quarter"
         android:color="@color/primaryColor"
@@ -10,5 +10,5 @@
     <corners android:bottomRightRadius="@dimen/fab_margin_quarter"
         android:bottomLeftRadius="@dimen/fab_margin_quarter"
         android:topLeftRadius="@dimen/fab_margin_quarter"
-        android:topRightRadius="@dimen/fab_margin_quarter"/>
+        android:topRightRadius="@dimen/fab_margin_quarter"/> -->
 </shape>
